[package]
name = "track17-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
wreq = { git = "https://github.com/0x676e67/wreq", features = ["cookies", "json", "gzip", "brotli", "zstd"] }
wreq-util = { git = "https://github.com/0x676e67/wreq-util" }
deno_core = "0.382"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
regex = "1"
fastrand = "2"
zipcodes = "0.3"

# HTTP Server dependencies
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[patch.crates-io]
wreq = { git = "https://github.com/0x676e67/wreq" }
